# FogROS2

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  AWSCLIV2.pkg.REMOVED.git-id  CONTRIBUTING.md  Dockerfile  INSTALL.md  QUICKSTART.md  README.md  SECURITY.md  awscliv2.zip.REMOVED.git-id  ros_entrypoint.sh
fogros2/: CHANGELOG.rst  package.xml  pyproject.toml  requirements.txt  setup.cfg  setup.py  to_cloud_nodes
fogros2/configs/: cyclonedds.ubuntu.2004.xml  cyclonedds.ubuntu.2204.xml  cyclonedds.xml
fogros2/fogros2/: __init__.py  aws.py  aws_cloud_instance.py  azure_cloud_instance.py  cloud_instance.py  cloud_node.py  command_builder.py  dds_config_builder.py  fogros2.py  fogros_launch_description.py  gcp_cloud_instance.py  launch_description.py  name_generator.py  package.xml  scp.py  setup.py  to_cloud_node  util.py  vpn.py  wgconfig.py  wgexec.py
fogros2/fogros2/command/: fog.py
fogros2/fogros2/fogros2/: aws.py  command_builder.py  fogros2.py  launch_builder.py  scp.py
fogros2/fogros2/kubernetes/: gcp_kubernetes.py  generic.py  gke.py  manifests.py  pod.json  ssh.json  ssh.yaml  vpn.json  vpn.yaml
fogros2/fogros2/verb/: delete.py  image.py  list.py  ssh.py
fogros2/image/: Dockerfile
fogros2/launch/: cloud.launch.py
fogros2/test/: test_pep257.py
fogros2/utils/: check_running_instances.py  ec2_instance_type_selection.py  region_ami_selection.py
fogros2_launch/: .gitignore  CHANGELOG.rst  conftest.py  package.xml  pytest.ini  setup.py
fogros2_launch/doc/source/: architecture.rst  conf.py
fogros2_launch/examples/: counter.py  disable_emulate_tty_counters.py  launch_counters.py
fogros2_launch/launch/: CHANGELOG.rst  __init__.py  action.py  condition.py  event.py  event_handler.py  fogros_launch_description.py  invalid_launch_file_error.py  launch_context.py  launch_description.py  launch_description_entity.py  launch_description_source.py  launch_introspector.py  launch_service.py  package.xml  setup.py  some_actions_type.py  some_substitutions_type.py  substitution.py
fogros2_launch/launch/actions/: __init__.py  append_environment_variable.py  conftest.py  declare_launch_argument.py  execute_local.py  execute_process.py  group_action.py  include_launch_description.py  log_info.py  opaque_coroutine.py  opaque_function.py  pop_launch_configurations.py  push_launch_configurations.py  register_event_handler.py  reset_launch_configurations.py  set_environment_variable.py  set_launch_configuration.py  shutdown_action.py  timer_action.py  unregister_event_handler.py  unset_environment_variable.py  unset_launch_configuration.py
fogros2_launch/launch/conditions/: __init__.py  evaluate_condition_expression_impl.py  if_condition.py  invalid_condition_expression_error.py  launch_configuration_equals.py  launch_configuration_not_equals.py  unless_condition.py
fogros2_launch/launch/descriptions/: __init__.py  executable.py
fogros2_launch/launch/event_handlers/: __init__.py  event_named.py  on_action_event_base.py  on_execution_complete.py  on_include_launch_description.py  on_process_exit.py  on_process_io.py  on_process_start.py  on_shutdown.py
fogros2_launch/launch/events/: __init__.py  execution_complete.py  include_launch_description.py  shutdown.py  timer_event.py
fogros2_launch/launch/examples/: disable_emulate_tty_counters.py
fogros2_launch/launch/frontend/: __init__.py  entity.py  expose.py  parse_substitution.py  parser.py  type_utils.py
fogros2_launch/launch/launch/: fogros_launch_description.py  launch_context.py  launch_description.py  launch_description_entity.py  launch_introspector.py  some_actions_type.py  substitution.py
fogros2_launch/launch/launch_description_sources/: __init__.py  any_launch_description_source.py  any_launch_file_utilities.py  frontend_launch_description_source.py  frontend_launch_file_utilities.py  python_launch_description_source.py  python_launch_file_utilities.py
fogros2_launch/launch/logging/: __init__.py  handlers.py
fogros2_launch/launch/substitutions/: __init__.py  anon_name.py  command.py  environment_variable.py  find_executable.py  launch_configuration.py  local_substitution.py  path_join_substitution.py  python_expression.py  text_substitution.py  this_launch_file.py  this_launch_file_dir.py
fogros2_launch/launch/utilities/: __init__.py  class_tools_impl.py  create_future_impl.py  ensure_argument_type_impl.py  normalize_to_list_of_substitutions_impl.py  perform_substitutions_impl.py  signal_management.py  type_utils.py  typing_file_path.py  visit_all_entities_and_collect_futures_impl.py
fogros2_launch/launch_pytest/: CHANGELOG.rst  README.md  package.xml  setup.cfg  setup.py
fogros2_launch/launch_pytest/launch_pytest/: __init__.py  fixture.py  plugin.py
fogros2_launch/launch_pytest/test/: conftest.py
fogros2_launch/launch_testing/: CHANGELOG.rst  README.md  package.xml  pytest.ini  setup.py
fogros2_launch/launch_testing/example_processes/: exit_code_proc.py  good_proc.py  terminating_proc.py
fogros2_launch/launch_testing/launch_testing/: __init__.py  decorator.py  io_handler.py  junitxml.py  launch_test.py  loader.py  markers.py  parametrize.py  parse_arguments.py  (+5 more)
fogros2_launch/launch_testing_ament_cmake/: CHANGELOG.rst  CMakeLists.txt  launch_testing_ament_cmake-extras.cmake  package.xml
fogros2_launch/launch_xml/: CHANGELOG.rst  README.md  package.xml  setup.py
fogros2_launch/launch_yaml/: CHANGELOG.rst  README.md  package.xml  setup.py
fogros2_launch/test/: test_copyright.py  test_flake8.py  test_pep257.py
fogros2_launch/test_launch_testing/: CHANGELOG.rst  CMakeLists.txt  package.xml
fogros2_launch_ros/launch_ros/: CHANGELOG.rst  package.xml  setup.py
fogros2_launch_ros/launch_testing_ros/: CHANGELOG.rst  README.md  launch_testing_ros_pytest_entrypoint.py  package.xml  pytest.ini  setup.cfg  setup.py
fogros2_launch_ros/ros2launch/: CHANGELOG.rst  package.xml  setup.py
ros2_h264_encoder/: CMakeLists.txt  h264_plugins.xml  package.xml
ros2_h264_encoder/src/: h264_publisher.cpp  manifest.cpp  ros2_encoder.cpp  ros2_encoder_handler.cpp
(+376 files in other folders)
