<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fogros2</name>
  <version>0.0.0</version>
  <description>
    A ROS 2 extension for the cloud deployment of computational graphs in a cloud-provider
    agnostic and security-conscious manner.
  </description>
  <author email="kych@berkeley.edu">Kaiyuan (Eric) Chen</author>
  <author email="v.mayoralv@gmail.com">Víctor Mayoral-Vilches</author>
  <maintainer email="kych@berkeley.edu">Kaiyuan (Eric) Chen</maintainer>
  <license>Apache License 2.0</license>

  <depend>boto3</depend>
  <depend>scp</depend>
  <depend>paramiko</depend>
  <depend>ros2cli</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
