<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fogros2</name>
  <version>0.1.3</version>
  <description>
    A ROS 2 extension for the cloud deployment of computational graphs in a cloud-provider
    agnostic and security-conscious manner.
  </description>
  <maintainer email="kych@berkeley.edu">Kaiyuan (Eric) Chen</maintainer>
  <author email="kych@berkeley.edu">Kaiyuan (Eric) Chen</author>
  <author email="jeffi@berkeley.edu">Jeff Ichnowski</author>
  <author email="victor@accelerationrobotics.com">Víctor Mayoral-Vilches</author>
  <license>Apache License 2.0</license>

  <depend>python3-boto3</depend>
  <depend>python3-scp</depend>
  <depend>python3-paramiko</depend>
  <depend>ros2cli</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
