<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>fogros2_launch</name>
  <version>0.1.0</version>
  <description>
    ROS 2 launch system extensions for FogROS 2. Launch ROS 2 subgraphs into the cloud easily.
  </description>
  <maintainer email="kych@berkeley.edu">Kaiyuan (Eric) Chen</maintainer>
  <author email="kych@berkeley.edu">Kaiyuan (Eric) Chen</author>
  <author email="victor@accelerationrobotics.com">Víctor Mayoral-Vilches</author>
  <license>Apache License 2.0</license>
  
  <depend>osrf_pycommon</depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>python3-importlib-metadata</exec_depend>
  <exec_depend>python3-lark-parser</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
