<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>launch_testing</name>
  <version>0.21.0</version>
  <description>A package to create tests which involve launch files and multiple processes.</description>

  <maintainer email="aditya.pande@openrobotics.org">Aditya Pande</maintainer>
  <maintainer email="michel@ekumenlabs.com">Michel Hidalgo</maintainer>

  <license>Apache License 2.0</license>

  <author email="dthomas@osrfoundation.org">Dirk Thomas</author>
  <author>Esteve Fernandez</author>
  <author email="pete.baughman@apex.ai">Pete Baughman</author>
  <author email="william@osrfoundation.org">William Woodall</author>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <!-- explicitly depend on the main launch frontends -->
  <exec_depend>launch_xml</exec_depend>
  <exec_depend>launch_yaml</exec_depend>
  <exec_depend>osrf_pycommon</exec_depend>
  <exec_depend>python3-pytest</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>launch</test_depend>

  <group_depend>launch_frontend_packages</group_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
