<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>launch_xml</name>
  <version>0.21.0</version>
  <description>XML frontend for the launch package.</description>

  <maintainer email="aditya.pande@openrobotics.org">Aditya Pande</maintainer>
  <maintainer email="michel@ekumenlabs.com">Michel Hidalgo</maintainer>

  <license>Apache License 2.0</license>

  <author email="ivanpauno@ekumenlabs.com">Ivan Paunovic</author>
  <author email="william@osrfoundation.org">William Woodall</author>

  <depend>launch</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <member_of_group>launch_frontend_packages</member_of_group>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
