<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>test_launch_testing</name>
  <version>0.21.0</version>
  <description>Tests for the launch_testing package.</description>

  <maintainer email="aditya.pande@openrobotics.org">Aditya Pande</maintainer>
  <maintainer email="michel@ekumenlabs.com">Michel Hidalgo</maintainer>

  <license>Apache License 2.0</license>

  <author email="ivanpauno@ekumenlabs.com">Ivan Paunovic</author>
  <author email="michel@ekumenlabs.com">Michel Hidalgo</author>
  <author email="william@osrfoundation.org">William Woodall</author>

  <build_depend>ament_cmake</build_depend>
  <build_depend>ament_cmake_python</build_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>ament_index_python</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
