<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format2.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>launch_ros</name>
  <version>0.17.0</version>
  <description>ROS specific extensions to the launch tool.</description>
  <maintainer email="aditya.pande@osrfoundation.org">Aditya Pande</maintainer>
  <maintainer email="jacob@openrobotics.org">Jacob Perron</maintainer>
  <maintainer email="michel@ekumenlabs.com">Michel Hidalgo</maintainer>
  <license>Apache License 2.0</license>
  <author email="william@osrfoundation.org">William Woodall</author>
  <author email="michael.jeronimo@openrobotics.org">Michael Jeronimo</author>

  <depend>ament_index_python</depend>
  <depend>launch</depend>
  <depend>lifecycle_msgs</depend>
  <depend>osrf_pycommon</depend>
  <depend>rclpy</depend>
  <depend>python3-importlib-metadata</depend>
  <depend>python3-yaml</depend>
  <depend>composition_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
