<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>launch_testing_ros</name>
  <version>0.17.0</version>
  <description>A package providing utilities for writing ROS2 enabled launch tests.</description>
  <maintainer email="aditya.pande@osrfoundation.org">Aditya Pande</maintainer>
  <maintainer email="jacob@openrobotics.org">Jacob Perron</maintainer>
  <maintainer email="michel@ekumenlabs.com">Michel Hidalgo</maintainer>
  <license>Apache License 2.0</license>
  <author email="pete.baughman@apex.ai">Pete Baughman</author>
  <author email="michael.jeronimo@openrobotics.org">Michael Jeronimo</author>

  <exec_depend>launch_testing</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>std_msgs</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
