<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2launch</name>
  <version>0.17.0</version>
  <description>
    The launch command for ROS 2 command line tools.
  </description>
  <maintainer email="aditya.pande@osrfoundation.org">Aditya Pande</maintainer>
  <maintainer email="jacob@openrobotics.org">Jacob Perron</maintainer>
  <maintainer email="michel@ekumenlabs.com">Michel Hidalgo</maintainer>
  <license>Apache License 2.0</license>
  <author email="william@osrfoundation.org">William Woodall</author>
  <author email="michael.jeronimo@openrobotics.org">Michael Jeronimo</author>

  <depend>ament_index_python</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>ros2cli</depend>
  <depend>ros2pkg</depend>

  <!-- explicitly depend on the main launch frontends -->
  <exec_depend>launch_xml</exec_depend>
  <exec_depend>launch_yaml</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <group_depend>launch_frontend_packages</group_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
